Update dbconsole setup scripts